--- a/assets/style.css
+++ b/assets/style.css
@@ -69,3 +69,15 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+/* My custom CSS properties */
+#timeStamps li{
+  text-align:center;
+  padding: 30px;
+  border: solid 2px cyan;
+  list-style-type: none;
+  border-left: none;
+  border-bottom: none;
+}
+
+/*  */
