added initial second column list that will be rendered upon each load of the webpage; second column list will have input fields within each that will allow the user to enter daily event at corresponding timeslot

--- a/assets/style.css
+++ b/assets/style.css
@@ -73,11 +73,26 @@ textarea {
 /* My custom CSS properties */
 #timeStamps li{
   text-align:center;
-  padding: 30px;
+  height: 100px;
+  padding-top: 40px;
   border: solid 2px cyan;
   list-style-type: none;
   border-left: none;
   border-bottom: none;
 }
 
-/*  */
+#dailyEvents li{
+  text-align: center;
+  height: 100px;
+  padding-top: 40px;
+  border: solid 2px red;
+  list-style-type: none;
+  border-bottom: none;
+}
+
+#scheduleInput{
+  width: 100%;
+  height: 100%;
+  margin-top: -40px;
+  border-style: none;
+}
