--- a/assets/style.css
+++ b/assets/style.css
@@ -71,28 +71,39 @@ textarea {
 }
 
 /* My custom CSS properties */
-#timeStamps li{
-  text-align:center;
-  height: 100px;
-  padding-top: 40px;
+.customTimeStamps{
+  margin-left: 50px;
+  margin-right: -30px;
+  padding-top: 30px;
+  list-style-type: none;
   border: solid 2px cyan;
-  list-style-type: none;
-  border-left: none;
-  border-bottom: none;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
-#dailyEvents li{
-  text-align: center;
-  height: 100px;
-  padding-top: 40px;
+.customScheduleInput{
+  margin-bottom: -2px;
   border: solid 2px red;
-  list-style-type: none;
+}
+
+.customSaveBtn{
+  margin-left: -30px;
+  border: solid 2px grey;
+}
+
+.customSaveBtn:hover{
+  background-color: magenta;
+}
+
+.customTimeStamps,
+.customScheduleInput,
+.customSaveBtn{
+  text-align:center;
+  height: 80px;
   border-bottom: none;
 }
 
-#scheduleInput{
+.customScheduleInput,
+.customSaveBtn{
   width: 100%;
-  height: 100%;
-  margin-top: -40px;
-  border-style: none;
 }
