--- a/assets/style.css
+++ b/assets/style.css
@@ -89,7 +89,7 @@ textarea {
 .customSaveBtn{
   margin-left: -30px;
   border: solid 2px grey;
-  font-size: x-large
+  font-size: x-large;
 }
 
 .customSaveBtn:hover{
