have color coded hour blocking functionality rendering to dom; need to find solution to make this happen on load

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,7 @@ textarea {
 
 .customScheduleInput{
   margin-bottom: -2px;
-  border: solid 2px red;
+  border: solid 2px magenta;
 }
 
 .customSaveBtn{
